--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 				max-width: 100%;
 				vertical-align: top;
 			}
+			img#responsive{
+				display: none;
+			}
+			@media screen and (max-width: 768px){
+				img#responsive{
+					display: block;
+				}
+			}
 		</style>
 	</head>
 	<body>
-		<img src="images/header.jpg">
+		<img src="images/invie-responsive.png" id="responsive">
 		<img src="images/hero.jpg">
 		<img src="images/acustica.jpg">
 		<img src="images/clasica.jpg">
